WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
147315
[ThreadedCompositor] Unreviewed build fix after
r186059
https://bugs.webkit.org/show_bug.cgi?id=147315
Summary
[ThreadedCompositor] Unreviewed build fix after r186059
Gwang Yoon Hwang
Reported
2015-07-26 22:37:34 PDT
[ThreadedCompositor] Unreviewed build fix after
r186059
Attachments
Patch
(2.81 KB, patch)
2015-07-26 22:39 PDT
,
Gwang Yoon Hwang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gwang Yoon Hwang
Comment 1
2015-07-26 22:39:23 PDT
Created
attachment 257546
[details]
Patch
WebKit Commit Bot
Comment 2
2015-07-26 23:35:30 PDT
Comment on
attachment 257546
[details]
Patch Clearing flags on attachment: 257546 Committed
r187416
: <
http://trac.webkit.org/changeset/187416
>
WebKit Commit Bot
Comment 3
2015-07-26 23:35:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug