[ThreadedCompositor] Unreviewed build fix after r186059 https://bugs.webkit.org/show_bug.cgi?id=147315

* Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::glContext):
Explicitly cast u_int64 to GLNativeWindowType.
* WebProcess/WebPage/CoordinatedGraphics/ThreadedCoordinatedLayerTreeHost.h:
(WebKit::ThreadedCoordinatedLayerTreeHost::create):
Update declaration to match with modified definition.


Canonical link: https://commits.webkit.org/165403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187416 268f45cc-cd09-0410-ab3c-d52691b4dbfc